alter method findAll to implements collect(Collectors.tolist)